# Hacking-LLM-Local

./: README.md  chainlit.md  pyproject.toml  soluciones_llama32.md
.chainlit/: config.toml
web/: app.py  prompts_web.py
web/public/: style.css
