[project]
name = "hackingllmlocal"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.9.1",
    "faker>=38.2.0",
    "langchain-core>=1.0.7",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "rich>=14.2.0",
    "textual>=6.6.0",
]
